# ecolog-lsp

./: CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  README.md
.github/workflows/: ci.yml  coverage.yml  release.yml  version-bump.yml
queries/bash/: assignments.scm  bindings.scm  completion.scm  destructures.scm  exports.scm  identifiers.scm  imports.scm  reassignments.scm  references.scm  scopes.scm
queries/c/: assignments.scm  bindings.scm  completion.scm  destructures.scm  exports.scm  identifiers.scm  imports.scm  reassignments.scm  references.scm  scopes.scm
queries/cpp/: assignments.scm  bindings.scm  completion.scm  destructures.scm  exports.scm  identifiers.scm  imports.scm  reassignments.scm  references.scm  scopes.scm
queries/csharp/: assignments.scm  bindings.scm  completion.scm  destructures.scm  exports.scm  identifiers.scm  imports.scm  reassignments.scm  references.scm  scopes.scm
queries/elixir/: assignments.scm  bindings.scm  completion.scm  destructures.scm  exports.scm  identifiers.scm  imports.scm  reassignments.scm  references.scm  scopes.scm
queries/go/: assignments.scm  bindings.scm  completion.scm  destructures.scm  exports.scm  identifiers.scm  imports.scm  reassignments.scm  references.scm  scopes.scm
queries/java/: assignments.scm  bindings.scm  completion.scm  destructures.scm  exports.scm  identifiers.scm  imports.scm  reassignments.scm  references.scm  scopes.scm
queries/javascript/: assignments.scm  bindings.scm  bindings.scm.bak  completion.scm  destructures.scm  exports.scm  identifiers.scm  imports.scm  reassignments.scm  references.scm  scopes.scm
queries/kotlin/: assignments.scm  bindings.scm  completion.scm  destructures.scm  exports.scm  identifiers.scm  imports.scm  reassignments.scm  references.scm  scopes.scm
queries/lua/: assignments.scm  bindings.scm  completion.scm  destructures.scm  exports.scm  identifiers.scm  imports.scm  reassignments.scm  references.scm  scopes.scm
queries/php/: assignments.scm  bindings.scm  completion.scm  destructures.scm  exports.scm  identifiers.scm  imports.scm  reassignments.scm  scopes.scm  (+1 more)
src/: constants.rs  error_ext.rs  lib.rs  main.rs  types.rs
tests/: aliases_test.rs  binding_chain_test.rs  bindings_integration.rs  commands_handler_test.rs  completion_test.rs  cross_module_test.rs  definition_handler_test.rs  definition_test.rs  diagnostics_handler_test.rs  env_resolution_test.rs  glob_config_test.rs  hover_test.rs  inlay_hints_handler_test.rs  integration_bash.rs  integration_c.rs  integration_cpp.rs  integration_csharp.rs  integration_elixir.rs  integration_go.rs  integration_java.rs  integration_js_ts.rs  integration_kotlin.rs  integration_php.rs  integration_python.rs  integration_ruby.rs  integration_rust.rs  integration_scenarios.rs  integration_zig.rs  interpolation_test.rs  masking_e2e_tests.rs  references_handler_test.rs  references_rename_test.rs  semantic_tokens_test.rs  services_test.rs  source_precedence_test.rs  strict_hover_range_test.rs
(+126 files in other folders)
